# DrawerBackend

./: .clang-format  .clang-tidy  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-bake.hcl  docker-compose.backup.yml  docker-compose.yml  main.cpp  mkdocs.yml
.devcontainer/: devcontainer.json
.github/workflows/: app-build-deploy.yml  compliance-lint.yml  compose-ci.yml  cpp-tests.yml  docs-ci.yml  infra-terraform.yml  pre-commit.yml  release.yml  static-analysis.yml
backend/: docker-compose.square.yml
backend/api/: .env  .env.example  Dockerfile  entrypoint.sh  package.json  tsconfig.json
cmake/: gpiod.cmake
config/: config.example.ini  config.example.json
dashboards/grafana/: register-mvp-dashboard.json
data/: health.json
docker/: Dockerfile.ops
docs/: FaultMatrix.md  HardeningChecklist.md  POS.md  POS_Contracts.md  Provisioning.md  Release.md  Rotation.md  SLOs.md  SecretInjection.md  SecurityHardening.md  ThreatModel.md  VendorA_Integration.md  VendorB_Integration.md  architecture.md  index.md
docs/api/: LocalAPI.md  POSWebhook.md  QuantBridge.md
docs/cloud/: ClusterRunbook.md  DeployPipeline.md  HelmChartGuide.md  TerraformHowTo.md
docs/compliance/: BOM_Compliance_Template.csv  CompliancePlan.md  EMC_PreScan_Procedure.md  ESD_Test_Procedure.md  ExternalLab_Packet.md  FusingAndProtection.md  LabBookingChecklist.md  LabelLocation_Drawing.md  Materials_UL94.md  PowerGroundingPlan.md  PreScan_Data_Sheet.csv  PreScan_Report_Template.md  RiskRegister.csv  SafetyChecklist.md  StandardsMatrix.md  StrainReliefAndCable.md  Surge_EFT_Procedure.md  WarningsAndLabels.md
docs/dfm_dfa/: Fasteners_and_Captive.md  Keyed_Harnessing.md  RevB_Notes.md
docs/eol/: EOL_Checklist.md  EOL_Data_Schema.md  EOL_Procedure.md  Sample_EOL_Report.md
docs/install/: InstallerGuide.md  PreflightChecklist.md  StoreDemoChecklist.md
docs/operator/: QuickStart.md  SafetySheet.md
docs/rma/: RMA_Process.md  SparesKit.csv  SparesKit.md
docs/runbooks/: DeviceOffline.md  JamRateHigh.md  LowCoins.md  QuantBridge.md  README.md  SuccessRateLow.md
docs/service/: JamClear.md  PartsReplacement.md  ServiceManual.md
docs/support/: FAQ.md  Glossary.md  Playbooks.md  Top10Issues.md  TroubleshootingTree.md
docs/training/: KnowledgeCheck.md  TrainingSlides.md  TrainingVideo_Script.md
docs/wi/: Assembly_WI.md  Torque_Table.md  WiringHarness_Spec.md
etc/prometheus/: alerts.yml
hal/: gpio.hpp  gpio_gpiod.cpp  gpio_mock.cpp  time.hpp
infra/terraform/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
integrations/pos/: sample_plugin.py
k8s/: helmfile.yaml
k8s/tests/: helm_template_test.sh
packaging/auditd/: audit.rules
packaging/firewall/: nftables.conf
packaging/logrotate/: register-mvp
packaging/nginx/: docs.conf
packaging/sshd/: sshd_hardening.conf
packaging/systemd/: register-mvp-eol.path  register-mvp-eol.service  register-mvp.service
packaging/tmpfiles.d/: register-mvp.conf
scripts/: package.sh  postinst.sh  prerm.sh
scripts/audit/: security_audit.sh
scripts/compliance/: check_ul94_bom.py  esd_logger.py  make_lab_packet.sh  power_budget.py  surge_logger.py  validate_prescan_log.py
scripts/demo/: demo_telemetry.json  smoke_store_demo.sh
scripts/dev/: smoke_test.sh  start_all.sh  stop_all.sh  tail_logs.sh
scripts/docs/: build_site.sh  check_links.sh  lint_markdown.sh  spell_custom.dict
scripts/eol/: collect_reports.py  run_eol.py
scripts/hardening/: apply_hardening.sh  ro_root_overlay.sh  verify_hardening.sh
scripts/provision/: print_label.py  provision_device.sh  provision_unit.sh
scripts/rotate/: rotate_secrets.sh
scripts/support/: collect_support_bundle.sh  redact_bundle.py
sim/: sim.cpp  sim.hpp
src/: main.cpp
src/app/: audit.cpp  audit.hpp  change_maker.cpp  change_maker.hpp  denom.hpp  dispense_adapter.cpp  dispense_adapter.hpp  dispense_ctrl.cpp  dispense_ctrl.hpp  idispenser.hpp  inventory.cpp  inventory.hpp  ishutter.hpp  jam_clear.cpp  jam_clear.hpp  multi_dispenser.cpp  multi_dispenser.hpp  selftest.cpp  selftest.hpp  service_mode.cpp  service_mode.hpp  shutter_adapter.cpp  shutter_adapter.hpp  shutter_fsm.cpp  shutter_fsm.hpp  txn_engine.cpp  txn_engine.hpp
src/burnin/: burnin.cpp  burnin.hpp
src/cloud/: disk_queue.cpp  disk_queue.hpp  identity.cpp  identity.hpp  iot_client.cpp  iot_client.hpp  mqtt_iface.hpp  mqtt_loopback.cpp  shadow.cpp  shadow.hpp  tls_identity.cpp  tls_identity.hpp
src/compliance/: compliance_mode.cpp  compliance_mode.hpp
src/config/: config.cpp  config.hpp
src/drivers/: hopper_parallel.cpp  hopper_parallel.hpp  hx711.cpp  hx711.hpp  iscale.hpp  stepper.cpp  stepper.hpp
src/eol/: eol_runner.cpp  eol_runner.hpp  eol_spec.cpp  eol_spec.hpp
src/hal/: gpio.hpp  gpio_gpiod.cpp  gpio_mock.cpp
src/obs/: metrics.cpp  metrics.hpp  sli_slo.cpp  (+3 more)
tests/: CMakeLists.txt  audit_sensor_stuck_test.cpp  audit_skip_test.cpp  audit_tolerance_test.cpp  burnin_stops_on_fault_test.cpp  change_maker_table_test.cpp  compliance_mode_flags_test.cpp  config_defaults_test.cpp  eol_runner_success_test.cpp  eol_runner_weight_fail_test.cpp  firewall_bind_localhost_test.cpp  hal_mock_test.cpp  help_endpoint_serves_docs_test.cpp  hopper_dispense_test.cpp  hopper_jam_test.cpp  hopper_noise_test.cpp  http_concurrency_test.cpp  http_handlers_test.cpp  identity_fallback_test.cpp  iot_client_test.cpp  iot_queue_reconnect_test.cpp  iot_shadow_update_test.cpp  jam_clear_retry_test.cpp  ledger_investable_calc_test.cpp  low_stock_fallback_test.cpp  metrics_counters_test.cpp  metrics_histogram_test.cpp  metrics_http_test.cpp  multi_hopper_integration_test.cpp  ota_agent_rollback_test.cpp  ota_agent_success_flow_test.cpp  ota_ring_selection_test.cpp  ota_sig_verify_test.cpp  pos_contract_test.cpp  pos_http_contract_test.cpp  pos_idempotency_basic_test.cpp  pos_idempotency_payload_mismatch_test.cpp  pos_idempotency_race_test.cpp  pos_serial_contract_test.cpp  pos_vendor_mapping_test.cpp  (+17 more)
util/: log.cpp  log.hpp
(+89 files in other folders)
